# iwedaman-okemo-data

./: .gitignore  _quarto.yml  first.html  pyproject.toml  ruff.toml
QMDS/: VDC-Data-Engineering.qmd  engineering.html  engineering.qmd  engineering.quarto_ipynb_1  report.html  report.qmd
_site/: first.html  index.html  search.json
_site/QMDS/: engineering.html  report.html
docs/: search.json
docs/QMDS/: engineering.html  report.html
