[project]
name = "iwedaman-okemo-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.3",
    "ipykernel>=7.2.0",
    "ipython>=9.14.1",
    "nbformat>=5.10.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "parquet>=1.3.1",
    "plotly>=6.8.0",
    "pyarrow>=24.0.0",
    "shapely>=2.1.2",
    "seaborn>=0.13.0",
    "matplotlib>=3.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
